fixed text-alignment on main text

--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ footer.darkMode {
   text-transform: uppercase;
   font-size: 60px;
   margin: 835px 15px 0 15px;
+  text-align: right;
 }
 
 .footer__container {
